--- a/App/PMSystem/PMSystem/View/UserPageView.xaml
+++ b/App/PMSystem/PMSystem/View/UserPageView.xaml
@@ -5,6 +5,16 @@
     <Grid Background="#f0f2f5">
         <Border Background="White" CornerRadius="10" Padding="30" VerticalAlignment="Center" HorizontalAlignment="Center" Width="370" >
             <StackPanel>
+                <Button
+                    Content="En"
+                    HorizontalAlignment="Right"
+                    Width="30"
+                    Background="Transparent"
+                    BorderThickness="0.5"
+                    Cursor="Hand"
+                    Click="LangChangeClick">
+                    
+                </Button>
                 <TextBlock Text="{DynamicResource UserPageTitle}" FontSize="26" FontWeight="SemiBold" Foreground="#333" Margin="0,0,0,20" HorizontalAlignment="Center"/>
 
                 <TextBlock Text="{DynamicResource UserName}" Foreground="#555" Margin="0,5,0,2"/>
