--- a/App/PMSystem/PMSystem/View/MainView.xaml
+++ b/App/PMSystem/PMSystem/View/MainView.xaml
@@ -96,6 +96,7 @@
                         x:Name="UsersButton" Click="UsersClick">
                         
                     </Button>
+                    
                 </StackPanel>
                 <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0" VerticalAlignment="Bottom" HorizontalAlignment="Left" >
                     <Button Background="Transparent" Cursor="Hand" BorderThickness="0" Click="ElipseClick">
@@ -139,7 +140,7 @@
                                         <TextBlock Text="{Binding ProjectMethodology}" FontSize="14" Foreground="#777777" Margin="0,0,0,10"/>
 
                                         <Button  Content="{DynamicResource ProjectMoreButton}" Width="100" Height="30" Background="#2196F3" Foreground="White" FontWeight="SemiBold" Cursor="Hand" BorderThickness="0"/>
-
+                                        
                                     </StackPanel>
 
                                 </Border>
@@ -170,7 +171,7 @@
 
                                         <TextBlock Text="{Binding UserRole}" FontSize="14" Foreground="#777777"/>
 
-                                        <Button Content="Информация" Width="100" Height="30" Background="#2196F3" Foreground="White" FontWeight="SemiBold" Cursor="Hand" BorderThickness="0"/>
+                                        <Button Content="{DynamicResource UserInfoButton}" Width="100" Height="30" Background="#2196F3" Foreground="White" FontWeight="SemiBold" Cursor="Hand" BorderThickness="0"/>
 
                                     </StackPanel>
 
