--- a/App/PMSystem/PMSystem/View/MainView.xaml
+++ b/App/PMSystem/PMSystem/View/MainView.xaml
@@ -127,6 +127,9 @@
                     <TextBlock x:Name="WelcomeTextBlock" Text="{DynamicResource WelcomeText}" Background="#2196F3" FontSize="24" FontWeight="SemiBold" Foreground="White"  Margin="0,0,0,20" Padding="10" />
                     <TextBlock x:Name="SideTextBlock" Text="{DynamicResource SideText}" FontSize="14" Foreground="#555555" TextWrapping="Wrap"/>
                 </StackPanel>
+                
+
+                <TextBox x:Name="SearchBar" Visibility="Collapsed"  Width="300" Height="30" Margin="0,10,0,10" Padding="5" Text="Search..." VerticalAlignment="Top" />
                 <ScrollViewer Name="scroll" Visibility="Hidden">
                     <ItemsControl Name="ContentControl">
                         <ItemsControl.Resources>
